--- a/mifosng-android/src/main/res/layout/item_pinpoint_location.xml
+++ b/mifosng-android/src/main/res/layout/item_pinpoint_location.xml
@@ -8,7 +8,8 @@
     android:layout_marginLeft="@dimen/default_horizontal_padding"
     android:layout_marginRight="@dimen/default_horizontal_padding"
     android:layout_marginTop="@dimen/default_horizontal_padding"
-    app:cardCornerRadius="2dp"
+    app:cardCornerRadius="10dp"
+    app:cardUseCompatPadding="true"
     app:cardElevation="2dp"
     app:cardPreventCornerOverlap="false"
     app:contentPadding="0dp"
