-SavingsAccountTransactionFragment custom Dialoge Implemented -LoanRepaymentFragment custom Dialoge Implemented -Settings default option remove -About Screen logo change

--- a/mifosng-android/src/main/res/values/colors.xml
+++ b/mifosng-android/src/main/res/values/colors.xml
@@ -70,6 +70,8 @@
     <color name="summer_sky">#29B6F6</color>
     <color name="foreground">#ffffffff</color>
 
+    <color name="coal_black">#36454f</color>
+
     <!--Swipe Refresh Colors-->
     <array name="swipeRefreshColors">
         <item>@color/blue_light</item>
