--- a/mifosng-android/src/main/res/layout/activity_about.xml
+++ b/mifosng-android/src/main/res/layout/activity_about.xml
@@ -29,7 +29,7 @@
                     android:layout_height="100dp"
                     android:layout_marginTop="20dp"
                     android:layout_gravity="center"
-                    android:src="@drawable/mifos_logo"/>
+                    android:src="@drawable/ahead_logo"/>
 
                 <TextView
                     android:id="@+id/textView"
