--- a/mifosng-android/src/main/res/layout/dialog_fragment_document.xml
+++ b/mifosng-android/src/main/res/layout/dialog_fragment_document.xml
@@ -5,128 +5,157 @@
   ~ See https://github.com/openMF/android-client/blob/master/LICENSE.md
   -->
 
-<LinearLayout
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_width="wrap_content"
-    android:orientation="vertical"
-    android:paddingBottom="24dp"
-    android:paddingRight="16dp"
-    android:paddingLeft="16dp"
     android:layout_centerHorizontal="true"
-    android:scrollbars="vertical"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:background="@drawable/white_rounded_edge_background"
+    android:orientation="vertical"
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp"
+    android:paddingBottom="24dp"
+    android:scrollbars="vertical">
 
     <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
         android:orientation="vertical">
 
         <TextView
-            style="@style/Base.TextAppearance.AppCompat.Large"
             android:id="@+id/tv_document_action"
-            android:layout_height="match_parent"
+            style="@style/Base.TextAppearance.AppCompat.Large"
             android:layout_width="match_parent"
-            android:paddingLeft="24dp"
-            android:paddingRight="24dp"
-            android:paddingStart="24dp"
-            android:paddingTop="24dp"
+            android:layout_height="match_parent"
             android:gravity="center"
+            android:paddingStart="24dp"
+            android:paddingLeft="24dp"
+            android:paddingTop="24dp"
+            android:paddingRight="24dp"
             android:text="@string/upload_document"
-            android:textColor="@color/primary"
-            android:textStyle="bold"/>
+            android:textColor="@color/black"
+            android:textStyle="bold" />
 
         <com.google.android.material.textfield.TextInputLayout
-            android:layout_height="match_parent"
             android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:paddingLeft="24dp"
-            android:paddingRight="24dp"
-            android:paddingTop="16dp">
+            android:paddingTop="16dp"
+            android:paddingRight="24dp">
 
             <EditText
-                android:hint="@string/name"
                 android:id="@+id/et_document_name"
-                android:inputType="text"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_width="match_parent"/>
+                android:hint="@string/name"
+                android:inputType="text"
+                android:textColor="@color/black" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/til_description"
-            android:layout_height="match_parent"
             android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:paddingLeft="24dp"
-            android:paddingRight="24dp"
-            android:paddingTop="16dp">
+            android:paddingTop="16dp"
+            android:paddingRight="24dp">
 
             <EditText
-                android:hint="@string/description"
                 android:id="@+id/et_document_description"
-                android:inputType="textMultiLine"
-                android:layout_height="match_parent"
                 android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:hint="@string/description"
+                android:inputType="textMultiLine"
+                android:scrollbars="vertical"
                 android:scrollHorizontally="false"
-                android:scrollbars="vertical"/>
+                android:textColor="@color/black" />
         </com.google.android.material.textfield.TextInputLayout>
 
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/til_selected_file"
-                android:gravity="center"
-                android:layout_height="match_parent"
-                android:layout_weight=".7"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/til_selected_file"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight=".7"
+            android:gravity="center"
+            android:paddingLeft="24dp"
+            android:paddingTop="16dp"
+            android:paddingRight="24dp"
+            android:visibility="gone">
+
+            <EditText
+                android:id="@+id/tv_choose_file"
                 android:layout_width="match_parent"
-                android:paddingLeft="24dp"
-                android:paddingRight="24dp"
-                android:paddingTop="16dp">
+                android:layout_height="match_parent"
+                android:enabled="false"
+                android:hint="@string/selected_file"
+                android:inputType="text"
+                android:lines="1"
+                android:scrollbars="vertical"
+                android:scrollHorizontally="false"
+                android:textColor="@color/black" />
 
-                <EditText
-                    android:hint="@string/selected_file"
-                    android:id="@+id/tv_choose_file"
-                    android:inputType="text"
-                    android:lines="1"
-                    android:layout_height="match_parent"
-                    android:layout_width="match_parent"
-                    android:scrollHorizontally="false"
-                    android:enabled="false"
-                    android:scrollbars="vertical"/>
-
-            </com.google.android.material.textfield.TextInputLayout>
+        </com.google.android.material.textfield.TextInputLayout>
 
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:paddingLeft="24dp"
-        android:paddingRight="24dp"
-        android:paddingTop="16dp">
+        android:layout_gravity="center"
+        android:layout_marginLeft="24dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginRight="24dp"
+        android:paddingStart="25dp"
+        android:paddingEnd="25dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:background="@drawable/upload_documnt_dialoge_border"
+        android:orientation="vertical">
 
-        <Button
-            android:drawableLeft="@drawable/ic_folder_black_24dp"
-            android:drawableStart="@drawable/ic_folder_black_24dp"
-            android:id="@+id/btn_browse_document"
-            android:layout_height="wrap_content"
+        <LinearLayout
             android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:gravity="center"
-            android:layout_weight="0.5"
-            android:text="@string/browse"
-            android:backgroundTint="@color/primary"
-            android:textAllCaps="true"/>
+            android:orientation="horizontal"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:weightSum="2">
 
-        <Button
-            android:drawableLeft="@drawable/ic_cloud_upload_black_24dp"
-            android:drawableStart="@drawable/ic_cloud_upload_black_24dp"
-            android:id="@+id/bt_upload"
-            android:layout_height="wrap_content"
+            <Button
+                android:id="@+id/btn_browse_document"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="5dp"
+                android:layout_weight="1"
+                android:background="@color/summer_sky"
+                android:gravity="center"
+                android:text="@string/browse"
+                android:textAllCaps="false"
+                android:textColor="@color/white" />
+
+            <Button
+                android:id="@+id/bt_upload"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_weight="1"
+                android:background="@color/summer_sky"
+                android:gravity="center"
+                android:text="@string/upload"
+                android:textAllCaps="false"
+                android:textColor="@color/white" />
+
+        </LinearLayout>
+
+        <TextView
             android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             android:gravity="center"
-            android:text="@string/upload"
-            android:layout_weight="0.5"
-            android:textAllCaps="true"
-            android:backgroundTint="@color/primary"
-            android:layout_marginTop="10dp"/>
+            android:text="Select File"
+            android:textSize="14sp"
+            android:textStyle="bold" />
 
     </LinearLayout>
 
