--- a/mifosng-android/src/main/res/layout/fragment_collection_sheet_dialog.xml
+++ b/mifosng-android/src/main/res/layout/fragment_collection_sheet_dialog.xml
@@ -1,84 +1,94 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-<TextView
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="20dp"
-    android:text="@string/found_sheet"
-    android:textSize="18sp"
-    android:textColor="@color/black"
-    android:gravity="center"/>
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:background="@drawable/white_rounded_edge_background">
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:gravity="center"
+        android:text="@string/found_sheet"
+        android:textColor="@color/black"
+        android:textSize="18sp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-       android:layout_margin="20dp"
-        android:text="@string/save_sheet_text"/>
+        android:layout_margin="20dp"
+        android:text="@string/save_sheet_text" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-           android:layout_marginLeft="20dp"
+            android:layout_marginLeft="20dp"
             android:text="@string/date"
-            android:textStyle="bold"/>
+            android:textStyle="bold" />
+
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
             android:id="@+id/tv_due_date"
-            />
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="10dp"
-            android:textStyle="bold"
-            android:text="@string/members" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="20dp"
-            android:id="@+id/tv_members"
-            />
+            android:layout_marginLeft="20dp" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:layout_margin="10dp">
-        <Button
-            android:layout_width="match_parent"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/fill_now"
-            android:layout_weight="1"
-            android:background="@drawable/login_button_rounded"
-            android:textColor="@color/white"
-            android:id="@+id/btn_fillnow"
-            android:layout_margin="5dp"
-            />
-        <Button
-            android:layout_width="match_parent"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="10dp"
+            android:text="@string/members"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/tv_members"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/login_button_rounded"
-            android:textColor="@color/white"
-            android:text="@string/cancel"
-            android:layout_margin="5dp"
-            android:layout_weight="1"
-            android:id="@+id/btn_cancel"/>
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="10dp" />
     </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_margin="10dp"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/btn_fillnow"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:layout_weight="1"
+            android:background="@drawable/login_button_rounded"
+            android:text="@string/fill_now"
+            android:textColor="@color/white" />
+
+        <Button
+            android:id="@+id/btn_cancel"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:layout_weight="1"
+            android:background="@drawable/login_button_rounded"
+            android:text="@string/cancel"
+            android:textColor="@color/white" />
+    </LinearLayout>
+
+
+
 </LinearLayout>
