--- a/mifosng-android/src/main/res/layout/row_loan_repayment_schedule.xml
+++ b/mifosng-android/src/main/res/layout/row_loan_repayment_schedule.xml
@@ -29,7 +29,7 @@
             android:layout_marginEnd="50dp"
             android:layout_marginRight="50dp"
             android:layout_marginLeft="10dp"
-            android:background="@color/light_red" />
+            android:background="@color/light_blue" />
 
         <TextView
             android:id="@+id/tv_repayment_due_date"
