-All Toast are replace with Toaster sweet alert -Hide about us section -Reduce sizes of views in pass code xml

--- a/mifosng-android/src/main/res/menu/menu_nav_drawer.xml
+++ b/mifosng-android/src/main/res/menu/menu_nav_drawer.xml
@@ -79,6 +79,7 @@
             android:checked="false"
             android:icon="@drawable/ic_about"
             android:title="@string/about"
+            android:visible="false"
             />
 
     </group>
